--- a/app.cfg
+++ b/app.cfg
@@ -41,3 +41,5 @@ ATT_MOD("Calibration.o");
 ATT_MOD("BlockLineUpBehavior.o");
 ATT_MOD("IPCommunication.o");
 ATT_MOD("BlockLineUpSearch.o");
+ATT_MOD("FaceDisplay.o");
+ATT_MOD("Music.o");
